--- a/Pipfile
+++ b/Pipfile
@@ -1,9 +1,10 @@
 [[source]]
 name = "pypi"
-url = "https://pypi.org/simple"
+url = "https://pypi.douban.com/simple"
 verify_ssl = true
 
 [dev-packages]
+fabric = "*"
 
 [packages]
 django = "==2.2.3"
