--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ fabric = "*"
 django = "==2.2.3"
 markdown = "*"
 gunicorn = "*"
+django-pure-pagination = "*"
 
 [requires]
 python_version = "3.6"
